--- a/back/package.json
+++ b/back/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "mime-types": "^2.1.35",
     "mongoose": "^5.10.7",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
